[project]
name = "podcastcreator"
version = "0.1.0"
description = "podcastcreator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
podcastcreator = "podcastcreator.main:run"
run_crew = "podcastcreator.main:run"
train = "podcastcreator.main:train"
replay = "podcastcreator.main:replay"
test = "podcastcreator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
